<resources>
    <string name="app_name" translatable="false">UpToday</string>
    <string name="loginLabel">Login</string>
    <string name="signupLabel">Signup</string>
    <string name="signupButtonLabel"><u>Create account</u></string>
    <string name="orLabel">or</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username must be at least 3 characters long</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be at least 5 characters long</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_success">"Signup succeeded"</string>
    <string name="signup_failed">"Signup failed"</string>
    <string name="signup_failed_exists">"Signup failed, email already registered"</string>
    <string name="title_activity_main_menu" translatable="false">MainMenuActivity</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="large_text" translatable="false" />
    <string name="main_btnListFacilities">Facility list</string>
    <string name="main_btnListBookings">Manage bookings</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="list_view_booking">New appointment</string>
    <string name="list_view_find">Find facility</string>
    <string name="list_label">Facility list</string>
    <string name="booking_pick_date">Select booking date</string>
    <string name="booking_pick_time_from">Select booking start time</string>
    <string name="booking_pick_time_to">Select booking finish time</string>
    <string name="booking_save_button">Save</string>
    <string name="booking_cancel_button">Return</string>
    <string name="date_picker_title">Select Appointment Date</string>
    <string name="booking_save_success">Booking saved successfully</string>
    <string name="list_bookings_pay">Pay</string>
    <string name="list_bookings_qr">Show QR</string>
    <string name="list_bookings_delete">Delete</string>
    <string name="list_bookings_label">Bookings list</string>
    <string name="alert_title">Warning</string>
    <string name="alert_delete">Do you really want to delete this booking?</string>
    <string name="alert_alarm">Do you want to set an alarm for this booking?</string>
    <string name="booking_delete_success">Booking deleted successfully</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="error_no_hours_available">No hours available, try another day</string>
    <string name="notification_title">Booking</string>
    <string name="notification_text">Your booking starts in 30 minutes</string>


    <string name="no_bookings_available">The selected date has no bookings available</string>
    <string name="payment_success">Payment completed successfully</string>

    <string name="about_text" translatable="false">Autor: Ivan Amor Pajares</string>
    <string name="alert_pay">Do you wish to pay your booking now?</string>
    <string name="button_action_open">Open</string>
    <string name="select_installation_label">Select instalation type</string>
    <string name="alarm_set">Alarm set on</string>
    <string name="cant_find_route">Can not find route</string>
    <string name="no_account_found">No google account found, please add an account to your device and try again</string>
    <string name="default_error">There was an error</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="booking_started">Booking started</string>
    <string name="user_not_found">User not found</string>
    <string name="logout">"Bye "</string>
</resources>